commit исправленное ДЗ lesson12 + усложнённое

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
     <script defer src="/script.js"></script>
 </head>
-<<body>
+<body>
     <header>
         <div class="container">
             <h1 class="title" id="title">Калькулятор верстки</h1>
